@@ -23,11 +23,13 @@ import java.util.Iterator;
 import lucee.commons.io.res.Resource;
 import lucee.commons.io.res.util.ResourceUtil;
 import lucee.commons.lang.ExceptionUtil;
+import lucee.commons.lang.StringUtil;
 import lucee.runtime.PageContext;
 import lucee.runtime.PageContextImpl;
 import lucee.runtime.PageSource;
 import lucee.runtime.config.ConfigWeb;
 import lucee.runtime.converter.JSONConverter;
+import lucee.runtime.converter.JSONDateFormat;
 import lucee.runtime.exp.FunctionException;
 import lucee.runtime.exp.PageException;
 import lucee.runtime.ext.function.Function;
@@ -78,7 +80,7 @@ public final class CallStackGet implements Function {
 
 		if (type.equalsIgnoreCase("json")) {
 			try {
-				return new JSONConverter(true, null).serialize(pc, arr, SerializationSettings.SERIALIZE_AS_ROW);
+				return new JSONConverter(true, null, JSONDateFormat.PATTERN_CF, false).serialize(pc, arr, SerializationSettings.SERIALIZE_AS_ROW, false);
 			}
 			catch (Throwable t) {
 				ExceptionUtil.rethrowIfNecessary(t);
@@ -157,7 +159,7 @@ public final class CallStackGet implements Function {
 			 * (PageException e) {}
 			 */
 			item.setEL(KeyConstants._template, abs((PageContextImpl) pc, template));
-			item.setEL(lineNumberName, new Double(line));
+			item.setEL(lineNumberName, Double.valueOf(line));
 			tagContext.appendEL(item);
 		}
 	}
@@ -167,11 +169,12 @@ public final class CallStackGet implements Function {
 
 		Resource res = config.getResource(template);
 		if (res.exists()) return template;
-
+		String tmp;
 		PageSource ps = pc == null ? null : pc.getPageSource(template);
 		res = ps == null ? null : ps.getPhyscalFile();
 		if (res == null || !res.exists()) {
-			res = config.getResource(ps.getDisplayPath());
+			tmp = ps.getDisplayPath();
+			res = StringUtil.isEmpty(tmp) ? null : config.getResource(tmp);
 			if (res != null && res.exists()) return res.getAbsolutePath();
 		}
 		else return res.getAbsolutePath();
