@@ -560,7 +560,7 @@ public final class Directory extends TagImpl {
 				query.addRow(1);
 				count++;
 				query.setAt(KeyConstants._name, count, list[i].getName());
-				query.setAt(KeyConstants._size, count, new Double(isDir ? 0 : list[i].length()));
+				query.setAt(KeyConstants._size, count, Double.valueOf(isDir ? 0 : list[i].length()));
 				query.setAt(KeyConstants._type, count, isDir ? "Dir" : "File");
 				if (modeSupported) {
 					query.setAt(MODE, count, new ModeObjectWrap(list[i]));
