@@ -870,8 +870,8 @@ public final class FileTag extends BodyTagImpl {
 
 		/*
 		 * try { BufferedImage bi = ImageUtil.toBufferedImage(file, null); if(bi!=null) { Struct img =new
-		 * StructImpl(); img.setEL(KeyConstants._width,new Double(bi.getWidth()));
-		 * img.setEL(KeyConstants._height,new Double(bi.getHeight())); sct.setEL(KeyConstants._img,img); } }
+		 * StructImpl(); img.setEL(KeyConstants._width,Double.valueOf(bi.getWidth()));
+		 * img.setEL(KeyConstants._height,Double.valueOf(bi.getHeight())); sct.setEL(KeyConstants._img,img); } }
 		 * catch(Exception e) {}
 		 */
 		return sct;
@@ -1037,7 +1037,6 @@ public final class FileTag extends BodyTagImpl {
 				cffile.set("serverfile", destination.getName());
 				cffile.set("serverfileext", ResourceUtil.getExtension(destination, ""));
 				cffile.set("serverfilename", ResourceUtil.getName(destination));
-				cffile.set("attemptedserverfile", destination.getName());
 				// }
 			}
 			else if (nameconflict == NAMECONFLICT_FORCEUNIQUE) {
@@ -1048,7 +1047,6 @@ public final class FileTag extends BodyTagImpl {
 				cffile.set("serverfile", destination.getName());
 				cffile.set("serverfileext", ResourceUtil.getExtension(destination, ""));
 				cffile.set("serverfilename", ResourceUtil.getName(destination));
-				cffile.set("attemptedserverfile", destination.getName());
 			}
 			else if (nameconflict == NAMECONFLICT_OVERWRITE) {
 				// fileWasAppended=true;
@@ -1123,7 +1121,9 @@ public final class FileTag extends BodyTagImpl {
 						blocklistedTypes = SystemUtil.getSystemPropOrEnvVar(SystemUtil.SETTING_UPLOAD_EXT_BLACKLIST, SystemUtil.DEFAULT_UPLOAD_EXT_BLOCKLIST);
 					if (StringUtil.isEmpty(blocklistedTypes))
 						blocklistedTypes = SystemUtil.getSystemPropOrEnvVar(SystemUtil.SETTING_UPLOAD_EXT_BLOCKLIST, SystemUtil.DEFAULT_UPLOAD_EXT_BLOCKLIST);
-					NotResourceFilter filter = new NotResourceFilter(new ExtensionResourceFilter(blocklistedTypes));
+
+					NotResourceFilter filter = new NotResourceFilter(new ExtensionResourceFilter(ListUtil.trimItems(ListUtil.listToStringArray(blocklistedTypes, ',')), false, true, false));
+
 					if (!filter.accept(clientFile)) throw new ApplicationException("Upload of files with extension [" + ext + "] is not permitted.", DETAIL);
 				}
 			}
